--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -63,3 +63,8 @@ form {
 button {
 	text-transform: uppercase;
 }
+
+.warn {
+	color: mat-color($warn);
+	font-size: 0.8em;
+}
